# randomuser

./: .gitignore  Cargo.toml  LICENSE  README.md
data/common/lists/: timezones.txt
src/: config.rs  lib.rs  main.rs
src/generator/: formats.rs  mod.rs  prng.rs
src/generator/nat/: au.rs  br.rs  ca.rs  ch.rs  de.rs  dk.rs  es.rs  fi.rs  fr.rs  gb.rs  geo.rs  ie.rs  in_.rs  ir.rs  lego.rs  mod.rs  mx.rs  nl.rs  no.rs  nz.rs  rs.rs  ua.rs  us.rs
src/routes/: api.rs  mod.rs  openapi.rs  stats.rs
src/stats/: mod.rs  mongo.rs
tests/: api.rs
